--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
+    "@vercel/analytics": "^1.4.1",
     "clsx": "^2.1.1",
     "firebase": "^11.1.0",
     "framer-motion": "^11.3.27",
