--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,45 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-hover-card": "^1.1.4",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-menubar": "^1.1.4",
+    "@radix-ui/react-navigation-menu": "^1.2.3",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@react-three/drei": "^9.109.5",
     "@react-three/fiber": "^8.17.5",
+    "@shadcn/ui": "^0.0.4",
     "@tabler/icons-react": "^3.12.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "@vercel/analytics": "^1.4.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "firebase": "^11.1.0",
-    "framer-motion": "^11.3.27",
+    "framer-motion": "^11.18.1",
+    "lucide-react": "^0.472.0",
     "mini-svg-data-uri": "^1.4.4",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -26,7 +55,8 @@
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.3.0",
     "react-lottie": "^1.2.4",
-    "tailwind-merge": "^2.5.2",
+    "simplex-noise": "^4.0.3",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.167.1",
     "three-globe": "^2.31.1"
